playing around with some designs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jamie Wubben</title>
-</head>
-<body>
-	<h1>test page</h1>
-</body>
+<!DOCTYPE html>
+	<!-- saved from url=(0048)https://jekyll-theme-minimal-resume.netlify.app/ -->
+<html lang="en" data-lt-installed="true">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Jamie Wubben</title>
+		<meta name="description" content="Jamie Wubben">
+		<link rel="stylesheet" href="./index_files/main.css">
+		<link rel="stylesheet" href="./index_files/devicon.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	</head>
+
+	<body>
+		<div id="particles-js">
+			<div class="header">
+				<h1>
+					<span class="site-title">Jamie Wubben</span>
+					<span class="site-description">PhD student at GRC</span>
+				</h1>
+				<div class="header-icons">
+					<a href="mailto:jwubben@disca.upv.es" target="_blank">
+						<i class="icon fa fa-envelope"></i>
+					</a>
+					<a href="https://github.com/Jamie-Wubben" target="_blank">
+						<i class="icon fa fa-github"></i>
+					</a>
+					<a href="https://www.researchgate.net/profile/Jamie-Wubben" target="_blank">
+						<i class="icon fa fa-graduation-cap"></i>
+					</a>
+				</div>
+			</div>
+			<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;"></canvas>
+		</div>
+
+		<section id="about">
+			<div class="user-details">
+				<h1>My Expertise</h1>
+				<p>I am Jamie and need to put something here</p>
+				<p>
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+					Why do we use it?
+					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+					
+					Why do we use it?
+					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+
+					Why do we use it?
+					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+
+					Why do we use it?
+					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+
+					Why do we use it?
+					It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+				</p>
+			</div> 
+			<script src="./index_files/particles.min.js.download"></script>
+			<script src="./index_files/sweet-scroll.min.js.download"></script>
+			<script src="./index_files/main.js.download"></script>
+		</section>
+	</body>
 </html>
